successfully create endpoint to get user login data
