# swagger_output.json
@@ -72,6 +72,35 @@
         ]
       }
     },
+    "/user/data": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to fetch user data by token",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/user/{nim}": {
       "get": {
         "tags": [
